--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
   ],
   "license": "ISC",
   "homepage": "https://github.com/yoshino-digital/ui-core",
-  "private": true,
+  "private": false,
   "ignore": [
     "**/.*",
     "node_modules",
