--- a/bower.json
+++ b/bower.json
@@ -21,8 +21,8 @@
     "package.json"
   ],
   "dependencies": {
-    "jquery": "^3.1.0",
-    "jquery-ui": "^1.12.0"
+    "jquery-ui": "^1.12.0",
+    "normalize-css": "^4.2.0"
   },
   "devDependencies": {
     "prism": "^1.5.1",
