--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
   ],
   "dependencies": {
     "jquery-ui": "^1.12.0",
-    "normalize-css": "^4.2.0"
+    "normalize-css": "^4.2.0",
+    "yoshino-icons": "^0.1.0"
   },
   "devDependencies": {
     "prism": "^1.5.1",
