--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "bower_components",
     "test",
     "tests",
+    "docs",
     "src/templates",
     "src/assets/less/theme",
     "src/assets/less/yoshino-ui-core.less",
