--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "merge-stream": "^1.0.0",
     "node-slack": "0.0.7",
     "nunjucks-markdown": "^2.0.0",
+    "request": "^2.79.0",
     "run-sequence": "^1.1.5"
   }
 }
