--- a/docs/_data/sitemap.yml
+++ b/docs/_data/sitemap.yml
@@ -106,5 +106,5 @@ workflows:
     - custom_branding
 tools:
     - index
-    - buttons_kitchensink
-    - color_tool
+    - buttons
+    - gradient
