--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -2,4 +2,4 @@ source "https://rubygems.org"
 ruby RUBY_VERSION
 
 gem "jekyll", "3.4.3"
-# gem "github-pages", group: :jekyll_plugins
+gem "github-pages"
