fixing css output

--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "clean-docs": "rm -rf docs/_site && mkdir docs/_site && rm -rf docs/assets && mkdir docs/assets && mkdir docs/assets/audio docs/assets/css docs/assets/js",
     "copy":"npm run copy-audio && npm run copy-favicon && npm run copy-scripts && npm run copy-styles",
     "copy-audio": "cp src/audio/* dist/audio/ && cp dist/audio/* docs/assets/audio/",
-    "copy-favicon": "cp src/img/favicon.ico docs/_site/",
+    "copy-favicon": "cp src/img/favicon.ico docs",
     "copy-scripts": "cp dist/js/* docs/assets/js/ && cp bower_components/jquery/dist/jquery.min.js docs/assets/js/",
     "copy-styles": "cp dist/css/* docs/assets/css/",
     "deploy": "npm run clean && npm run deploy-scripts && npm run deploy-styles && npm run copy && npm run deploy-jekyll",
     "deploy-jekyll" : "cd docs && JEKYLL_ENV=github jekyll build --config _config.yml",
     "deploy-scripts": "uglifyjs src/js/**/*.js --beautify -o dist/js/yoi.js && npm run copy-scripts",
-    "deploy-styles": "lessc src/less/index.less dist/css/yoi.css && postcss --use autoprefixer -b 'last 2 versions' dist/css/yoi.css -o dist/css/yoi.css && cssnano < dist/css/yoi.css > dist/css/yoi.css --svgo && npm run copy-styles",
+    "deploy-styles": "lessc src/less/index.less dist/css/yoi.css && postcss --use autoprefixer -b 'last 2 versions' dist/css/yoi.css -o dist/css/yoi.css && cssnano dist/css/yoi.css dist/css/yoi.css --svgo && npm run copy-styles",
     "serve": "npm run watch & browser-sync start --server 'docs/_site'",
     "watch": "npm run watch-styles & npm run watch-jekyll & npm run watch-scripts",
     "watch-jekyll": "chokidar 'docs/assets' 'docs/index.md' 'docs/_includes/' 'docs/_layouts/' 'docs/_pages/' -c 'cd docs && npm run build-jekyll && browser-sync reload'",
