fixing github-pages paths

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,7 +11,7 @@ icon: "http://cdn.yoshino.digital/svg.php?id=icon-"
 
 # Build Settings
 
-baseurl: "/"
+baseurl: "./"
 markdown: kramdown
 include: ['_pages']
 exclude: ['Gemfile','Gemfile.lock']
