--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "chokidar-cli": "^1.2.0"
   },
   "scripts": {
-    "preinstall": "gem install --user-install --bindir ~/bin --no-document --pre --verbose jekyll && npm install -g bower && bower update",
+    "preinstall": "install-bower && install-jekyll && install-gems",
+	"install-bower": "npm install -g bower && bower update",
+	"install-jekyll": "gem install --user-install --bindir ~/bin --no-document --pre --verbose jekyll",
+	"install-gems": "cd docs && bundle install",
     "build": "npm run clean && npm run build-scripts && npm run build-styles && npm run copy && npm run build-jekyll",
     "build-jekyll": "cd docs && jekyll build --config _config.yml",
     "build-scripts": "uglifyjs src/js/**/*.js --source-map-inline --beautify -o dist/js/yoi.js && npm run copy-scripts",
