--- a/docs/_data/sitemap.yml
+++ b/docs/_data/sitemap.yml
@@ -26,7 +26,7 @@ elements:
     - badge
     - box
     - breadcrumbs
-    - buttons
+    - button
     - callout
     - checkList
     - code
@@ -41,7 +41,7 @@ elements:
     - headings
     - hint
     - iconMenu
-    - icons
+    - icon
     - imgMagnifier
     - link
     - linkList
@@ -74,7 +74,7 @@ elements:
     - stepMenu
     - stepper
     - switch
-    - tables
+    - table
     - tabs
     - tooltip
 interface:
