--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "build-styles": "lessc src/less/index.less dist/css/yoi.css --source-map-map-inline && postcss --use autoprefixer -b 'last 2 versions' dist/css/yoi.css -o dist/css/yoi.css && npm run copy-styles",
     "clean": "npm run clean-dist && npm run clean-docs",
     "clean-dist": "rm -rf dist && mkdir dist && mkdir dist/audio dist/css dist/img dist/js",
-    "clean-docs": "rm -rf docs/_site && mkdir docs/_site && rm -rf docs/assets && mkdir docs/assets && mkdir docs/assets/audio docs/assets/css docs/assets/js",
-    "copy":"npm run copy-audio && npm run copy-favicon && npm run copy-scripts && npm run copy-styles",
+    "clean-docs": "rm -rf docs/_site && mkdir docs/_site && rm -rf docs/assets && mkdir docs/assets && mkdir docs/assets/audio docs/assets/css docs/assets/img docs/assets/js",
+    "copy":"npm run copy-audio && npm run copy-favicon && npm run copy-images && npm run copy-scripts && npm run copy-styles",
     "copy-audio": "cp src/audio/* dist/audio/ && cp dist/audio/* docs/assets/audio/",
     "copy-favicon": "cp src/img/favicon.ico docs",
+    "copy-images": "cp src/img/* dist/img/ && cp dist/img/* docs/assets/img/",
     "copy-scripts": "cp dist/js/* docs/assets/js/ && cp bower_components/jquery/dist/jquery.min.js docs/assets/js/",
     "copy-styles": "cp dist/css/* docs/assets/css/",
     "deploy": "npm run clean && npm run deploy-scripts && npm run deploy-styles && npm run copy && npm run deploy-jekyll",
