--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "install-jekyll": "gem install --user-install --bindir ~/bin --no-document --pre --verbose jekyll",
     "install-gems": "cd docs && bundle install",
     "build": "npm run clean && npm run build-scripts && npm run build-styles && npm run copy && npm run build-jekyll",
-    "build-jekyll": "cd docs && jekyll build --config _config.yml",
+    "build-jekyll": "cd docs && bundle exec jekyll build --config _config.yml",
     "build-scripts": "uglifyjs src/js/yoi.js src/js/elements/*.js src/js/features/*.js src/js/actions/*.js src/js/modules/*.js --source-map-inline --beautify -o dist/js/yoi.js && npm run copy-scripts",
     "build-styles": "lessc src/less/index.less dist/css/yoi.css --source-map-map-inline && postcss --use autoprefixer -b 'last 2 versions' dist/css/yoi.css -o dist/css/yoi.css && npm run copy-styles",
     "clean": "npm run clean-dist && npm run clean-docs",
@@ -32,7 +32,7 @@
     "copy-scripts": "cp dist/js/* docs/assets/js/ && cp bower_components/jquery/dist/jquery.min.js docs/assets/js/",
     "copy-styles": "cp dist/css/* docs/assets/css/",
     "deploy": "npm run clean && npm run deploy-scripts && npm run deploy-styles && npm run copy && npm run deploy-jekyll",
-    "deploy-jekyll" : "cd docs && JEKYLL_ENV=production jekyll build --config _config.yml",
+    "deploy-jekyll" : "cd docs && JEKYLL_ENV=production bundle exec jekyll build --config _config.yml",
     "deploy-scripts": "uglifyjs src/js/yoi.js src/js/elements/*.js src/js/features/*.js src/js/actions/*.js src/js/modules/*.js --compress -o dist/js/yoi.js && npm run copy-scripts",
     "deploy-styles": "lessc src/less/index.less dist/css/yoi.css && postcss --use autoprefixer -b 'last 2 versions' dist/css/yoi.css -o dist/css/yoi.css && cssnano dist/css/yoi.css dist/css/yoi.css --svgo && npm run copy-styles",
     "serve": "npm run watch & browser-sync start --server 'docs/_site' --cors",
