--- a/package.json
+++ b/package.json
@@ -23,10 +23,9 @@
     "build-scripts": "uglifyjs src/js/yoi.js src/js/elements/*.js src/js/behaviours/*.js src/js/actions/*.js src/js/modules/*.js --source-map-inline --beautify -o dist/js/yoi.js && npm run copy-scripts",
     "build-styles": "lessc src/less/index.less dist/css/yoi.css --source-map-map-inline && postcss --use autoprefixer -b 'last 2 versions' dist/css/yoi.css -o dist/css/yoi.css && npm run copy-styles",
     "clean": "npm run clean-dist && npm run clean-docs",
-    "clean-dist": "rm -rf dist && mkdir dist && mkdir dist/audio dist/css dist/img dist/js",
-    "clean-docs": "rm -rf docs/_site && mkdir docs/_site && rm -rf docs/assets && mkdir docs/assets && mkdir docs/assets/audio docs/assets/css docs/assets/img docs/assets/js",
-    "copy":"npm run copy-audio && npm run copy-favicon && npm run copy-images && npm run copy-scripts && npm run copy-styles",
-    "copy-audio": "cp src/audio/* dist/audio/ && cp dist/audio/* docs/assets/audio/",
+    "clean-dist": "rm -rf dist && mkdir dist && mkdir dist/css dist/img dist/js",
+    "clean-docs": "rm -rf docs/_site && mkdir docs/_site && rm -rf docs/assets && mkdir docs/assets && mkdir docs/assets/css docs/assets/img docs/assets/js",
+    "copy":"npm run copy-favicon && npm run copy-images && npm run copy-scripts && npm run copy-styles",
     "copy-favicon": "cp src/img/favicon.ico docs",
     "copy-images": "cp src/img/* dist/img/ && cp dist/img/* docs/assets/img/",
     "copy-scripts": "cp dist/js/* docs/assets/js/ && cp bower_components/jquery/dist/jquery.min.js docs/assets/js/",
