--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "yoi",
   "version": "0.0.1",
-  "dependencies": {
+  "description": "The Yoshino frontend component library.",
+  "author": "yoshino.digital dev team",
+  "devDependencies": {
     "autoprefixer": "^6.7.7",
     "bower": "^1.8.0",
+    "browser-sync": "^2.18.8",
+    "chokidar-cli": "^1.2.0",
     "cssnano-cli": "^1.0.5",
     "less": "^2.7.2",
     "postcss-cli": "^3.0.0",
     "uglify-js": "^2.8.14"
-  },
-  "devDependencies": {
-    "browser-sync": "^2.18.8",
-    "chokidar-cli": "^1.2.0"
   },
   "scripts": {
     "preinstall": "install-bower && install-jekyll && install-gems",
