--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "yoi",
-  "version": "0.0.1",
+  "name": "yoshino-yoi",
+  "version": "0.1.56",
   "description": "The Yoshino frontend component library.",
   "author": "yoshino.digital dev team",
   "devDependencies": {
@@ -21,10 +21,10 @@
     "build": "npm run clean && npm run build-scripts && npm run build-styles && npm run copy && npm run build-jekyll",
     "build-jekyll": "cd docs && bundle exec jekyll build --config _config.yml",
     "build-scripts": "uglifyjs src/js/yoi.js src/js/behaviours/*.js src/js/actions/*.js src/js/modules/*.js src/components/**/*.js --source-map-inline --beautify -o dist/js/yoi.js && npm run copy-scripts",
-    "build-styles" : "npm run styles:compile --source-map-map-inline && npm run styles:process && npm run copy-styles",
-    "styles:process" : "postcss --use autoprefixer -b 'last 2 versions' dist/css/yoi.css -o dist/css/yoi.css",
-    "styles:compress" : "cssnano dist/css/yoi.css dist/css/yoi.css --svgo",
-    "styles:compile" : "(cat src/less/yoi.less ; echo $(find src/components -name '*.less' -exec echo '@import \"./{}\";' \\;)) | lessc - dist/css/yoi.css --include-path=./src/less/",
+    "build-styles": "npm run styles:compile --source-map-map-inline && npm run styles:process && npm run copy-styles",
+    "styles:process": "postcss --use autoprefixer -b 'last 2 versions' dist/css/yoi.css -o dist/css/yoi.css",
+    "styles:compress": "cssnano dist/css/yoi.css dist/css/yoi.css --svgo",
+    "styles:compile": "(cat src/less/yoi.less ; echo $(find src/components -name '*.less' -exec echo '@import \"./{}\";' \\;)) | lessc - dist/css/yoi.css --include-path=./src/less/",
     "clean": "npm run clean-dist && npm run clean-docs",
     "clean-dist": "rm -rf dist && mkdir dist && mkdir dist/css dist/img dist/js",
     "clean-docs": "rm -rf docs/_site && mkdir docs/_site && rm -rf docs/assets && mkdir docs/assets && mkdir docs/assets/css docs/assets/img docs/assets/js",
@@ -33,10 +33,10 @@
     "copy-images": "cp src/img/* dist/img/ && cp dist/img/* docs/assets/img/",
     "copy-scripts": "cp dist/js/* docs/assets/js/ && cp bower_components/jquery/dist/jquery.min.js docs/assets/js/",
     "copy-styles": "cp dist/css/* docs/assets/css/",
-    "deploy": "npm run clean && npm run deploy-scripts && npm run deploy-styles && npm run copy && npm run deploy-jekyll",
-    "deploy-jekyll" : "cd docs && JEKYLL_ENV=production bundle exec jekyll build --config _config.yml",
-    "deploy-scripts": "uglifyjs src/js/yoi.js src/js/behaviours/*.js src/js/actions/*.js src/js/modules/*.js src/components/**/*.js --compress -o dist/js/yoi.js && npm run copy-scripts",
-    "deploy-styles": "npm run styles:compile && npm run styles:process && npm run styles:compress && npm run copy-styles",
+    "publish": "npm run clean && npm run publish-scripts && npm run publish-styles && npm run copy && npm run publish-jekyll",
+    "publish-jekyll" : "cd docs && JEKYLL_ENV=production bundle exec jekyll build --config _config.yml",
+    "publish-scripts": "uglifyjs src/js/yoi.js src/js/behaviours/*.js src/js/actions/*.js src/js/modules/*.js src/components/**/*.js --compress -o dist/js/yoi.js && npm run copy-scripts",
+    "publish-styles": "npm run styles:compile && npm run styles:process && npm run styles:compress && npm run copy-styles",
     "serve": "npm run watch & browser-sync start --server 'docs/_site' --cors",
     "watch": "npm run watch-styles & npm run watch-jekyll & npm run watch-scripts",
     "watch-jekyll": "chokidar 'docs/assets' 'docs/index.md' 'docs/_includes/' 'docs/_layouts/' 'docs/_pages/' -c 'cd docs && npm run build-jekyll && browser-sync reload'",
