--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chokidar-cli": "^1.2.0",
     "cssnano-cli": "^1.0.5",
     "less": "^2.7.2",
+    "npm-bump": "0.0.22",
     "postcss-cli": "^4.1.1",
     "uglify-js": "^2.8.14"
   },
@@ -32,7 +33,7 @@
     "copy-images": "cp src/img/* dist/img && cp dist/img/* docs/assets/img",
     "copy-scripts": "cp dist/js/* docs/assets/js && cp bower_components/jquery/dist/jquery.min.js docs/assets/js",
     "copy-styles": "cp dist/css/* docs/assets/css",
-    "publish": "npm run clean && npm run publish-scripts && npm run publish-styles && npm run copy && npm run publish-jekyll",
+    "publish": "npm run clean && npm run publish-scripts && npm run publish-styles && npm run copy && npm run publish-jekyll && npm-bump alpha",
     "publish-jekyll": "cd docs && JEKYLL_ENV=production bundle exec jekyll build --config _config.yml",
     "publish-scripts": "uglifyjs src/js/yoi.js src/js/behaviours/*.js src/js/actions/*.js src/js/modules/*.js src/components/**/*.js --compress -o dist/js/yoi.js && npm run copy-scripts",
     "publish-styles": "npm run styles:compile && npm run styles:process && npm run styles:compress && npm run copy-styles",
