cleans up file names, fixes page meta

--- a/docs/_data/sitemap.yml
+++ b/docs/_data/sitemap.yml
@@ -1,7 +1,7 @@
 start:
     - index
     - setup
-    - start_learning
+    - startlearning
     - customizing
     - debugging
 utilities:
@@ -13,7 +13,7 @@ utilities:
     - gradient
     - grid
     - interface
-    - js_fallback
+    - jsfallback
     - layout
     - opacity
     - shadow
