small fixes & correct typos, include sitemap

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,6 +3,8 @@
 title: YOI - the Yoshino Frontend Component Library
 description: A quick-to-learn, yet powerful set of elements and utilities for building and designing web pages directly in the browser.
 url: "https://yoshino-digital.github.io/yoi/"
+plugins_dir:
+  - jekyll-sitemap
 
 # Build Settings
 
